Last section todo.

--- a/vignettes/bibFile.bib
+++ b/vignettes/bibFile.bib
@@ -27,3 +27,21 @@
   year={1989}
 }
 
+@article{trapnell2009,
+  title={TopHat: discovering splice junctions with RNA-Seq},
+  author={Cole Trapnell and Lior Pachter and Steven L. Salzberg},
+  journal={Bioinformatics},
+  volume={25},
+  number={9},
+  pages={1105-1111},
+  year={2009}
+}
+
+@article{risso2014,
+  title={Normalization of RNA-seq data using factor analysis of control genes or samples},
+  author={Davide Risso and John Ngai and Terence P. Speed and Sandrine Dudoit},
+  journal={Nature Biotechnology},
+  volume={32},
+  pages={896–902},
+  year={2014}
+}
